--- a/wear/src/main/res/layout/fragment_control.xml
+++ b/wear/src/main/res/layout/fragment_control.xml
@@ -1,30 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--
-<android.support.wearable.view.CircularButton
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/recording_toggle"
-    android:src="@drawable/icon_record"
-    android:backgroundTint="@color/dark_red"
-    android:layout_margin="50dp"
-    app:buttonRippleColor="@color/black"
-    app:imageScaleMode="fit" />
--->
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    tools:context=".ControlFragment">
 
     <android.support.wearable.view.CircularButton
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/record_button"
-        android:src="@drawable/icon_record"
+        android:src="@drawable/ic_record"
         android:color="@color/dark_red"/>
 
     <TextView
