--- a/wear/src/main/res/layout/fragment_data.xml
+++ b/wear/src/main/res/layout/fragment_data.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="com.example.google.whererunner.MainActivity">
+    tools:context=".DataFragment">
 
     <TextView
         android:layout_width="wrap_content"
