--- a/wear/src/main/res/layout/fragment_route.xml
+++ b/wear/src/main/res/layout/fragment_route.xml
@@ -2,6 +2,7 @@
 <com.google.android.gms.maps.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,4 +10,5 @@
     map:uiZoomGestures="false"
     map:uiScrollGestures="false"
     map:uiRotateGestures="false"
-    map:uiTiltGestures="false" />
+    map:uiTiltGestures="false"
+    tools:context=".RouteMapFragment" />
