--- a/wear/src/main/res/layout/fragment_settings.xml
+++ b/wear/src/main/res/layout/fragment_settings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/heart"
-    android:src="@drawable/ic_heart"
-    tools:context=".DataFragment"/>
+    android:id="@+id/settings_list"
+    android:background="@color/dark_grey"
+    android:divider="@null"
+    tools:context=".SettingsFragment"/>
