--- a/wear/src/main/res/layout/fragment_heart.xml
+++ b/wear/src/main/res/layout/fragment_heart.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<ImageButton
+    android:id="@+id/heart_button"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/heart"
     android:src="@drawable/ic_heart"
     tools:context=".DataFragment"/>
