--- a/wear/src/main/res/layout/actions_main.xml
+++ b/wear/src/main/res/layout/actions_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.wearable.view.drawer.WearableActionDrawer
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60pt"
+    android:layout_height="120dp"
     android:paddingTop="5dp"
     android:background="@color/blue">
 
@@ -19,7 +20,8 @@
             android:layout_height="@dimen/action_button_size"
             android:layout_marginRight="@dimen/action_button_label_spacing"
             android:id="@+id/record_button"
-            android:src="@drawable/ic_record" />
+            android:src="@drawable/ic_record"
+            android:backgroundTint="@color/light_grey" />
 
         <TextView
             android:text="@string/record"
@@ -32,11 +34,13 @@
             android:layout_marginRight="@dimen/action_button_label_spacing"
             android:id="@+id/activity_type_button"
             android:src="@drawable/ic_running"
-            android:padding="10dp" />
+            android:backgroundTint="@color/light_grey" />
 
         <TextView
             android:text="@string/activity_type"
+            android:layout_marginTop="@dimen/action_button_spacing"
             android:layout_gravity="center_vertical" />
 
     </GridLayout>
+
 </android.support.wearable.view.drawer.WearableActionDrawer>
