--- a/wear/src/main/res/layout/fragment_main.xml
+++ b/wear/src/main/res/layout/fragment_main.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/time"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/map_overlay_background"
+            android:background="@drawable/bg_map_overlay"
             android:textColor="@color/black"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
