--- a/wear/src/main/res/layout/fragment_main.xml
+++ b/wear/src/main/res/layout/fragment_main.xml
@@ -1,11 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.wearable.view.GridViewPager
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:nestedScrollingEnabled="true"
     android:background="@color/dark_grey"
-    tools:context=".MainFragment"/>
+    android:nestedScrollingEnabled="true"
+    tools:context=".MainFragment">
+
+    <android.support.wearable.view.GridViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <TextClock
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/bg_map_overlay"
+        android:textColor="@color/black"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:layout_marginTop="@dimen/clock_margin_top"
+        android:format12Hour="h:mm:ss"
+        android:format24Hour="H:mm:ss" />
+
+</FrameLayout>
