--- a/wear/src/main/res/drawable/marker_red.xml
+++ b/wear/src/main/res/drawable/marker_red.xml
@@ -7,6 +7,6 @@
         android:color="@color/dark_red"/>
 
     <size
-        android:width="12dp"
-        android:height="12dp"/>
+        android:width="@dimen/map_marker_size"
+        android:height="@dimen/map_marker_size"/>
 </shape>
