--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="action_button_size">40dp</dimen>
     <dimen name="action_button_label_spacing">7dp</dimen>
     <dimen name="action_button_spacing">5dp</dimen>
+
+    <dimen name="map_marker_size">13dp</dimen>
 </resources>
