--- a/wear/src/main/res/layout/fragment_data.xml
+++ b/wear/src/main/res/layout/fragment_data.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/distance"
         android:gravity="center"
+        android:textSize="@dimen/data_text_size"
         android:text="DISTANCE" />
 
     <TextView
@@ -20,6 +21,7 @@
         android:id="@+id/duration"
         android:gravity="center"
         android:layout_below="@id/distance"
+        android:textSize="@dimen/data_text_size"
         android:text="DURATION" />
 
 </RelativeLayout>
