--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="action_button_spacing">5dp</dimen>
 
     <dimen name="map_marker_size">13dp</dimen>
+
+    <dimen name="data_text_size">18sp</dimen>
 </resources>
