--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="clock_margin_top">5dp</dimen>
+    <dimen name="map_overlay_inset">5dp</dimen>
+    <dimen name="map_overlay_padding_vertical">5dp</dimen>
+    <dimen name="map_overlay_padding_horizontal">2dp</dimen>
 
     <dimen name="action_button_size">40dp</dimen>
     <dimen name="action_button_label_spacing">7dp</dimen>
