Main components migrated to use material theme attrs and dark ui colors

--- a/wear/src/main/res/drawable/marker_blue.xml
+++ b/wear/src/main/res/drawable/marker_blue.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/dark_blue"/>
+        android:color="@color/primary"/>
 
     <size
         android:width="@dimen/map_marker_size"
