--- a/wear/src/main/res/drawable/marker_red.xml
+++ b/wear/src/main/res/drawable/marker_red.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/dark_red"/>
+        android:color="@color/highlight_dark"/>
 
     <size
         android:width="@dimen/map_marker_size"
