--- a/wear/src/main/res/values/themes.xml
+++ b/wear/src/main/res/values/themes.xml
@@ -3,6 +3,6 @@
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primary_dark</item>
         <item name="android:colorAccent">@color/primary_accent</item>
-        <item name="android:windowBackground">@color/primary_15</item>
+        <item name="android:windowBackground">@color/indigo_15b</item>
     </style>
 </resources>
