Class and file naming clean-up

--- a/wear/src/main/res/layout/fragment_activity_main.xml
+++ b/wear/src/main/res/layout/fragment_activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:nestedScrollingEnabled="true"
-    tools:context=".MainFragment">
+    tools:context=".ActivityMainFragment">
 
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
