--- a/wear/src/main/res/values/colors.xml
+++ b/wear/src/main/res/values/colors.xml
@@ -12,6 +12,9 @@
     <item name="text_primary" type="color">#CCBBBBBB</item>
     <item name="text_dark" type="color">#CC222222</item>
 
+    <!-- Subtle tinting for the map to darken and for theme color matching -->
+    <item name="map_tint" type="color">#22000626</item>
+
     <!-- Material Design Indigo 500 palette for wearables -->
     <item name="indigo" type="color">#FF3F51B5</item>
     <item name="indigo_100b" type="color">#FF8093FF</item>
