--- a/wear/src/main/res/layout/fragment_activity_main.xml
+++ b/wear/src/main/res/layout/fragment_activity_main.xml
@@ -59,4 +59,47 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|right"
+        android:layout_marginRight="@dimen/map_overlay_margin">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_more_1"
+            android:src="@drawable/ic_more_circle_opaque"
+            android:layout_marginTop="@dimen/map_overlay_spacing"
+            android:layout_marginBottom="@dimen/map_overlay_spacing" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_more_2"
+            android:src="@drawable/ic_more_circle"
+            android:layout_below="@+id/main_more_1"
+            android:layout_marginTop="@dimen/map_overlay_spacing"
+            android:layout_marginBottom="@dimen/map_overlay_spacing" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_more_3"
+            android:src="@drawable/ic_more_circle"
+            android:layout_below="@+id/main_more_2"
+            android:layout_marginTop="@dimen/map_overlay_spacing"
+            android:layout_marginBottom="@dimen/map_overlay_spacing" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_more_4"
+            android:src="@drawable/ic_more_circle"
+            android:layout_below="@+id/main_more_3"
+            android:layout_marginTop="@dimen/map_overlay_spacing"
+            android:layout_marginBottom="@dimen/map_overlay_spacing" />
+
+    </RelativeLayout>
+
 </FrameLayout>
