Starting HRM service in main activity

--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:nestedScrollingEnabled="true" />
+        android:layout_height="match_parent" />
 
     <android.support.wearable.view.drawer.WearableNavigationDrawer
         android:id="@+id/nav_drawer"
