--- a/wear/src/main/res/layout/fragment_workout_map.xml
+++ b/wear/src/main/res/layout/fragment_workout_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityMapFragment">
+    tools:context=".WorkoutMapFragment">
 
     <com.google.android.gms.maps.MapView
         xmlns:map="http://schemas.android.com/apk/res-auto"
