--- a/wear/src/main/res/menu/action_drawer_menu.xml
+++ b/wear/src/main/res/menu/action_drawer_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/record_button"
-        android:icon="@drawable/ic_record"
+        android:icon="@drawable/ic_record_white"
         android:title="@string/record" />
 
     <item android:id="@+id/activity_type_button"
