--- a/wear/src/main/res/layout/fragment_heart_rate.xml
+++ b/wear/src/main/res/layout/fragment_heart_rate.xml
@@ -1,18 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/hr_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/ic_heart"
+    android:gravity="center_vertical"
+    tools:context=".HeartRateFragment">
 
-    <Button
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/heart_button"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_heart"
-        android:layout_weight="1"
-        android:layout_gravity="center"
-        android:text="N/A"
-        tools:context=".WorkoutDataFragment"/>
+    <!-- TODO: move constants to values file(s) -->
+    <!-- TODO: make bg image bigger so that we can use more of the screen -->
 
+    <TextView
+        android:id="@+id/hr_max"
+        style="@style/text_small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
+        android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/hr_instantaneous"
+        style="@style/text_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hr_max"
+        android:layout_centerHorizontal="true"
+        android:text="@string/hrm_no_data" />
 
+    <TextView
+        android:id="@+id/hr_min"
+        style="@style/text_small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hr_instantaneous"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
+</RelativeLayout>
