--- a/wear/src/main/res/layout/fragment_workout_data.xml
+++ b/wear/src/main/res/layout/fragment_workout_data.xml
@@ -8,7 +8,7 @@
     tools:context=".WorkoutDataFragment">
 
     <TextView
-        style="@style/header"
+        style="@style/text_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/distance"
@@ -16,7 +16,7 @@
         android:text="DISTANCE" />
 
     <TextView
-        style="@style/header"
+        style="@style/text_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/duration"
