--- a/wear/src/main/res/values/arrays.xml
+++ b/wear/src/main/res/values/arrays.xml
@@ -2,10 +2,11 @@
 <resources>
     <string-array name="settings_list">
         <item>Show map location accuracy circle?</item>
-        <item>Only use GPS sensor on watch?</item>
+        <item>Force use GPS sensor on watch?</item>
         <item>Vibrate when signal lost?</item>
-        <item>No signal timeout (secs)</item>
+        <item>No location update timeout (secs)</item>
         <item>Location accuracy threshold (meters)</item>
         <item>Show phone connectivity state?</item>
+        <item>Show HRM connectivity state?</item>
     </string-array>
 </resources>
