--- a/wear/src/main/res/layout/fragment_heart_rate.xml
+++ b/wear/src/main/res/layout/fragment_heart_rate.xml
@@ -19,7 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="22dp" />
+        android:layout_marginTop="22dp"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/hr_instantaneous"
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hr_instantaneous"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
