--- a/wear/src/main/res/layout/fragment_history.xml
+++ b/wear/src/main/res/layout/fragment_history.xml
@@ -1,15 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.google.whererunner.HistoryFragment">
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.wearable.view.BoxInsetLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_height="match_parent"
+android:layout_width="match_parent"
+tools:context=".SettingsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="match_parent"
+<FrameLayout
+    android:id="@+id/frame_layout"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    app:layout_box="left|bottom|right">
+
+    <android.support.wearable.view.WearableListView
+        android:id="@+id/settings_list"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/nr_workouts" />
+        android:layout_width="match_parent" />
 
 </FrameLayout>
+</android.support.wearable.view.BoxInsetLayout>
