--- a/wear/src/main/res/layout/fragment_workout_data.xml
+++ b/wear/src/main/res/layout/fragment_workout_data.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/duration"
         android:gravity="center"
-        android:text="SPEED" />
+        android:text="SPEED (CURR/AVG)" />
 
     <TextView
         android:id="@+id/speed"
