--- a/wear/src/main/res/values/arrays.xml
+++ b/wear/src/main/res/values/arrays.xml
@@ -1,26 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="settings_list">
-        <item>Map Overlays</item>
-        <item>Location/GPS</item>
+        <!-- TODO add support for tweaking UI and location settings -->
         <item>Google Fit</item>
-    </string-array>
-
-    <string-array name="settings_map_list">
-        <item>Accuracy circle</item>
-        <item>Phone connectivity</item>
-        <item>Location connectivity</item>
-        <item>HRM connectivity</item>
-    </string-array>
-
-    <string-array name="settings_location_list">
-        <item>Force watch GPS</item>
-        <item>Update timeout (secs)</item>
-        <item>Accuracy threshold (meters)</item>
-        <item>Vibrate when signal lost</item>
-    </string-array>
-
-    <string-array name="settings_fit_list">
-        <item>Eanble Google Fit</item>
+        <!--<item>Map accuracy circle</item>-->
+        <!--<item>Phone connectivity</item>-->
+        <!--<item>Location connectivity</item>-->
+        <!--<item>HRM connectivity</item>-->
+        <!--<item>Force watch GPS</item>-->
+        <!--<item>Update timeout (secs)</item>-->
+        <!--<item>Accuracy threshold (meters)</item>-->
+        <!--<item>Vibrate when signal lost</item>-->
     </string-array>
 </resources>
