Implemented history data display

--- a/wear/src/main/res/layout/fragment_history.xml
+++ b/wear/src/main/res/layout/fragment_history.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wearable.view.BoxInsetLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_height="match_parent"
-android:layout_width="match_parent"
-tools:context=".SettingsFragment">
-
 <FrameLayout
-    android:id="@+id/frame_layout"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    app:layout_box="left|bottom|right">
+    android:layout_height="match_parent"
+    tools:context=".HistoryMainFragment">
 
-    <android.support.wearable.view.WearableListView
-        android:id="@+id/settings_list"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+    <android.support.wearable.view.GridViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <include layout="@layout/pager_pips"/>
 
 </FrameLayout>
-</android.support.wearable.view.BoxInsetLayout>
