--- a/wear/src/main/res/layout/pager_pip.xml
+++ b/wear/src/main/res/layout/pager_pip.xml
@@ -3,4 +3,4 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:src="@drawable/ic_more_circle_opaque" />
+    android:src="@drawable/ic_pager_pip" />
