--- a/wear/src/main/res/layout/action_drawer_peek.xml
+++ b/wear/src/main/res/layout/action_drawer_peek.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
+    android:paddingTop="@dimen/drawer_peek_padding_top"
+    android:paddingBottom="@dimen/drawer_peek_padding_bottom"
     android:gravity="center">
 
     <ImageView
