--- a/wear/src/main/res/values-round/dimens.xml
+++ b/wear/src/main/res/values-round/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="map_overlay_margin">10dp</dimen>
+
+    <dimen name="drawer_peek_padding_top">0dp</dimen>
+    <dimen name="drawer_peek_padding_bottom">4dp</dimen>
 </resources>
