--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -10,9 +10,15 @@
     <!-- Spacing between map overlay items. Visual spacing will be 2x this amount. -->
     <dimen name="map_overlay_spacing">2dp</dimen>
 
+    <!-- Spacing between pager pips. Visual spacing will be 2x this amount. -->
+    <dimen name="pager_pip_spacing">1dp</dimen>
+
     <dimen name="map_marker_size">13dp</dimen>
 
     <dimen name="text_large">22sp</dimen>
     <dimen name="text_medium">16sp</dimen>
     <dimen name="text_small">12sp</dimen>
+
+    <dimen name="drawer_peek_padding_top">0dp</dimen>
+    <dimen name="drawer_peek_padding_bottom">0dp</dimen>
 </resources>
