--- a/wear/src/main/res/drawable/ic_pager_pip.xml
+++ b/wear/src/main/res/drawable/ic_pager_pip.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-
-    <solid
-        android:color="@color/white_60a"/>
-
-    <size
-        android:width="4dp"
-        android:height="4dp"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+    <solid android:color="@color/white_70a"/>
+    <size android:width="4dp" android:height="4dp"/>
 </shape>
