--- a/wear/src/main/res/drawable/ic_stop.xml
+++ b/wear/src/main/res/drawable/ic_stop.xml
@@ -4,5 +4,7 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
 
-    <path android:fillColor="#8000" android:pathData="M18,18H6V6H18V18Z" />
+    <path
+        android:fillColor="@color/black_54p"
+        android:pathData="M18,18H6V6H18V18Z" />
 </vector>
