--- a/wear/src/main/res/drawable/map_marker.xml
+++ b/wear/src/main/res/drawable/map_marker.xml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-
-    <solid
-        android:color="@color/primary"/>
-
-    <size
-        android:width="@dimen/map_marker_size"
-        android:height="@dimen/map_marker_size"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+    <solid android:color="@color/primary"/>
+    <size android:width="@dimen/map_marker_size" android:height="@dimen/map_marker_size"/>
 </shape>
